@@ -8,6 +8,11 @@
 SEXP LU_validate(SEXP obj);
 #endif /* MJ */
 
+SEXP denseLU_expand(SEXP obj);
+
+/* MJ: no longer needed ... prefer denseLU_expand() */
+#if 0
 SEXP LU_expand(SEXP x);
+#endif /* MJ */
 
 #endif
